fix(global): Make more inputs use larger font on mobile

--- a/css/components/_inputs.scss
+++ b/css/components/_inputs.scss
@@ -1,11 +1,19 @@
 @media screen and (max-width: config('screens.md')) {
-  input[type="text"],
+  input[type="color"],
+  input[type="date"],
+  input[type="datetime"],
+  input[type="datetime-local"],
   input[type="email"],
-  input[type="password"],
-  input[type="tel"],
+  input[type="month"],
   input[type="number"],
+  input[type="password"],
   input[type="search"],
+  input[type="tel"],
+  input[type="text"],
+  input[type="time"],
   input[type="url"],
+  input[type="week"],
+  select:focus,
   textarea {
     font-size: 1rem;
   }
